--- a/index.html
+++ b/index.html
@@ -386,16 +386,16 @@
      
       <div id="errorMessages"></div>
      <p>
-    <a href="https://validator.w3.org/nu/?showsource=yes&doc=https%3A%2F%2Fkoiitoh.github.io%2Fa4%2Findex.html">
+    <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fkoiitoh.github.io%2Fa4%2Findex.html">
         <img style="border:0;width:88px;height:31px"
             src="https://www.w3.org/Icons/valid-html401"
             alt="Valid HTML!" >
     </a>
-       <a href="http://jigsaw.w3.org/css-validator/check/referer">
+       <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fkoiitoh.github.io%2Fa4%2Fthankyou.html">
         <img style="border:0;width:88px;height:31px"
             src="https://www.w3.org/Icons/valid-html401"
             alt="Valid HTML!" ></a>
-       <a href="http://jigsaw.w3.org/css-validator/check/referer">
+       <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fkoiitoh.github.io%2Fa4%2Findex.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
         <img style="border:0;width:88px;height:31px"
             src="http://jigsaw.w3.org/css-validator/images/vcss"
             alt="Valid CSS!" >
